--- a/index.html
+++ b/index.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>SMS Messaging Disclosure</title>
+  <title>Personal SMS Messaging Service</title>
 </head>
 <body>
 
-<h1>SMS Messaging Disclosure</h1>
+<h1>Personal SMS Messaging Service</h1>
 
 <p>
-This site describes a low-volume, personal SMS messaging service used for conversational and informational messages.
+This website describes a low-volume personal SMS messaging service used to forward messages from a private Telegram group to a single opted-in phone number.
 </p>
 
-<h2>Opt-In</h2>
+<h2>Service Offered</h2>
 <p>
-Users opt in by explicitly requesting that messages be sent to their phone number.
-Only one designated, opted-in phone number is used.
+One-to-one, conversational SMS messages for personal use only.
+No marketing, advertising, or bulk messaging.
 </p>
 
-<h2>Message Details</h2>
+<h2>About</h2>
+<p>
+This service is operated by an individual for personal communication and notification purposes.
+</p>
+
+<h2>Contact</h2>
+<p>
+Email: phil.graybill@gmail.com
+</p>
+
+<h2>SMS Compliance</h2>
 <ul>
-  <li><strong>SMS Type:</strong> Conversational / Informational</li>
-  <li><strong>Message Frequency:</strong> Varies (low volume)</li>
-  <li><strong>Message & Data Rates:</strong> May apply</li>
+  <li><a href="optin.html">SMS Opt-In</a></li>
+  <li><a href="privacy.html">Privacy Policy</a></li>
+  <li><a href="terms.html">Terms & Conditions</a></li>
 </ul>
-
-<h2>Opt-Out & Help</h2>
-<ul>
-  <li>Reply <strong>STOP</strong> to stop messages</li>
-  <li>Reply <strong>HELP</strong> for help</li>
-</ul>
-
-<p>
-<a href="privacy.html">Privacy Policy</a> |
-<a href="terms.html">Terms & Conditions</a>
-</p>
 
 </body>
 </html>
