Change email and add address in contact section
Updated email address and added physical address.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@ This service is operated by an individual for personal communication and notific
 
 <h2>Contact</h2>
 <p>
-Email: phil.graybill@gmail.com
-</p>
+Email: philgraybill2@gmail.com
+Address: 800 Mainstem Road Pantego, NC 27860  
+  <p>
 
 <h2>SMS Compliance</h2>
 <ul>
