Add complaints section to index.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@ Email: philgraybill2@gmail.com
 Address: 800 Mainstem Road Pantego, NC 27860  
   <p>
 
+<h2>Complaints</h2>
+<p>
+If you have any concerns or complaints about this SMS messaging service,
+please email: <strong>phil.graybill@gmail.com</strong>
+</p>
+
+    
 <h2>SMS Compliance</h2>
 <ul>
   <li><a href="optin.html">SMS Opt-In</a></li>
