Update email address for complaints

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Address: 800 Mainstem Road Pantego, NC 27860
 <h2>Complaints</h2>
 <p>
 If you have any concerns or complaints about this SMS messaging service,
-please email: <strong>phil.graybill@gmail.com</strong>
+please email: <strong>philgraybill2@gmail.com</strong>
 </p>
 
     
