Add complaints section to terms.html
Added a section for submitting complaints regarding the SMS messaging service.

--- a/terms.html
+++ b/terms.html
@@ -21,6 +21,12 @@ Message frequency varies. Message and data rates may apply.
 You may opt out at any time by replying STOP.
 For assistance, reply HELP.
 </p>
+<h2>Complaints</h2>
+
+  <p>
+Complaints regarding this SMS messaging service may be submitted by email to:
+phil.graybill@gmail.com
+</p>
 
 </body>
 </html>
