Update contact email for complaints

--- a/terms.html
+++ b/terms.html
@@ -25,7 +25,7 @@ For assistance, reply HELP.
 
   <p>
 Complaints regarding this SMS messaging service may be submitted by email to:
-phil.graybill@gmail.com
+philgraybill2@gmail.com
 </p>
 
 </body>
