Enhance service description in index.html
Added details about the personal SMS messaging service.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <p>
 This website describes a low-volume personal SMS messaging service used to forward messages from a private Telegram group to a single opted-in phone number.
+This website documents a personal, non-commercial SMS messaging service operated by an individual.  
 </p>
 
 <h2>Service Offered</h2>
@@ -17,6 +18,11 @@ One-to-one, conversational SMS messages for personal use only.
 No marketing, advertising, or bulk messaging.
 </p>
 
+<h2>Service Description</h2>
+<p>
+The service provides low-volume, conversational SMS message delivery initiated by a private Telegram group to a single opted-in phone number.
+</p>
+  
 <h2>About</h2>
 <p>
 This service is operated by an individual for personal communication and notification purposes.
