Revise about.html for clarity and structure
Updated the content and structure of the about.html file to provide a clearer description of the messaging service.

--- a/about.html
+++ b/about.html
@@ -1,7 +1,35 @@
-About This Messaging Service
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>About This Messaging Service</title>
+</head>
+<body>
 
-This is a personal, non-commercial SMS messaging service operated by an individual for low-volume, conversational and informational messaging.
+<h1>About This Messaging Service</h1>
 
-Messages are sent only to a single, explicitly opted-in phone number and are not used for marketing, advertising, or bulk messaging.
+<p>
+This website documents a personal, non-commercial SMS messaging service operated by an individual.
+</p>
 
-This service is used to forward messages from a private Telegram group to a designated phone number for convenience.
+<p>
+The service is used to send low-volume, conversational and informational SMS messages to a single,
+explicitly opted-in phone number. Messages may originate from a private Telegram group and are forwarded
+for convenience only.
+</p>
+
+<p>
+This service is not used for marketing, advertising, bulk messaging, or promotional campaigns.
+</p>
+
+<p>
+All messaging complies with applicable carrier and CTIA guidelines, including opt-in, opt-out,
+and help disclosures.
+</p>
+
+<p>
+<a href="index.html">Back to Home</a>
+</p>
+
+</body>
+</html>
