Revise contact information and HTML structure

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,32 @@
-Contact Information
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Contact Information</title>
+</head>
+<body>
 
-This personal messaging service is operated by an individual.
+<h1>Contact Information</h1>
 
-For questions or support related to SMS messages, contact:
+<p>
+This personal SMS messaging service is operated by an individual.
+</p>
 
-Email: philgraybill2@gmail.com
+<p>
+For questions, support, or concerns related to messages received through this service, please contact:
+</p>
 
-You may also reply HELP to any message for assistance or STOP to opt out.
+<p>
+<strong>Email:</strong> <a href="mailto:phil@coastalshedcompany.com">phil@coastalshedcompany.com</a>
+</p>
+
+<p>
+You may also reply <strong>HELP</strong> to any message for assistance or <strong>STOP</strong> to opt out.
+</p>
+
+<p>
+<a href="index.html">Back to Home</a>
+</p>
+
+</body>
+</html>
