Update contact email address in contact.html

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@ For questions, support, or concerns related to messages received through this se
 </p>
 
 <p>
-<strong>Email:</strong> <a href="mailto:phil@coastalshedcompany.com">phil@coastalshedcompany.com</a>
+<strong>Email:</strong> <a href="mailto:philgraybill2@gmail.com">phil@coastalshedcompany.com</a>
 </p>
 
 <p>
