Revise headings and compliance section format
Updated the heading and added a service description. Changed the compliance section to a paragraph format with links.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 </head>
 <body>
 
-<h1>Personal SMS Messaging Service</h1>
+<h1>SMS Messaging Disclosure</h1>
 
 <p>
-This website describes a low-volume personal SMS messaging service used to forward messages from a private Telegram group to a single opted-in phone number.
-This website documents a personal, non-commercial SMS messaging service operated by an individual.  
+This website documents a personal, non-commercial SMS messaging service operated by an individual.
+The service is used for low-volume, conversational and informational messaging only.
 </p>
+
 
 <h2>Service Offered</h2>
 <p>
@@ -42,11 +43,13 @@ please email: <strong>philgraybill2@gmail.com</strong>
 
     
 <h2>SMS Compliance</h2>
-<ul>
-  <li><a href="optin.html">SMS Opt-In</a></li>
-  <li><a href="privacy.html">Privacy Policy</a></li>
-  <li><a href="terms.html">Terms & Conditions</a></li>
-</ul>
+<p>
+<a href="about.html">About</a> |
+<a href="contact.html">Contact</a> |
+<a href="privacy.html">Privacy Policy</a> |
+<a href="terms.html">Terms & Conditions</a>
+</p>
+
 
 </body>
 </html>
