--- a/terms.html
+++ b/terms.html
@@ -28,5 +28,13 @@ Complaints regarding this SMS messaging service may be submitted by email to:
 philgraybill2@gmail.com
 </p>
 
+<p>
+<a href="about.html">About</a> |
+<a href="contact.html">Contact</a> |
+<a href="privacy.html">Privacy Policy</a> |
+<a href="terms.html">Terms & Conditions</a>
+</p>
+
+  
 </body>
 </html>
