--- a/privacy.html
+++ b/privacy.html
@@ -25,5 +25,13 @@ Messages may be processed by third-party telecommunications providers solely for
 If you have questions, you may reply HELP via SMS.
 </p>
 
+<p>
+<a href="about.html">About</a> |
+<a href="contact.html">Contact</a> |
+<a href="privacy.html">Privacy Policy</a> |
+<a href="terms.html">Terms & Conditions</a>
+</p>
+
+  
 </body>
 </html>
