Update footer links in optin.html

--- a/optin.html
+++ b/optin.html
@@ -22,10 +22,13 @@ This service provides low-volume, conversational SMS messages to a single design
     Reply STOP to unsubscribe. Reply HELP for help.
   </p>
 
-  <p>
-    <a href="privacy.html">Privacy Policy</a> |
-    <a href="terms.html">Terms & Conditions</a>
-  </p>
+ <p>
+<a href="about.html">About</a> |
+<a href="contact.html">Contact</a> |
+<a href="privacy.html">Privacy Policy</a> |
+<a href="terms.html">Terms & Conditions</a>
+</p>
+
 </form>
 
 </body>
