Fix HTML structure and add line breaks

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>Personal SMS Messaging Service</title>
 </head>
 <body>
-
+<h1>PERSONAL SMS MESSAGING SERVICE<h1>
+  
 <h2>SMS Messaging Disclosure</h2>
 
 <p>
@@ -31,7 +32,7 @@ This service is operated by an individual for personal communication and notific
 
 <h2>Contact</h2>
 <p>
-Email: philgraybill2@gmail.com
+Email: philgraybill2@gmail.com<br>
 Address: 800 Mainstem Road Pantego, NC 27860  
   <p>
 
