Enhance index.html with service details and links
Added service operator information and contact details.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
 </head>
 <body>
 <h1>PERSONAL SMS MESSAGING SERVICE<h1>
+
+<h2>Service Operator</h2>
+
+<p>
+This SMS messaging service is operated by an individual for personal, non-commercial use.
+</p>
+
+<p>
+Contact Email: <a href="mailto:philgraybill2@gmail.com">phil@coastalshedcompany.com</a>
+</p>
+
+<p>
+<a href="index.html">Home</a> |
+<a href="about.html">About</a> |
+<a href="contact.html">Contact</a> |
+<a href="privacy.html">Privacy Policy</a> |
+<a href="terms.html">Terms & Conditions</a>
+</p>
+
   
 <h2>SMS Messaging Disclosure</h2>
 
@@ -15,10 +34,12 @@ The service is used for low-volume, conversational and informational messaging o
 
 
 <h2>Service Offered</h2>
+
 <p>
-One-to-one, conversational SMS messages for personal use only.
-No marketing, advertising, or bulk messaging.
+This service provides one-to-one SMS message delivery for conversational and informational purposes.
+Messages may be initiated by the user or forwarded from a private Telegram group for convenience.
 </p>
+
 
 <h2>Service Description</h2>
 <p>
