Clarify opt-in process for SMS messages
Added clarification about the opt-in process for SMS messages.

--- a/optin.html
+++ b/optin.html
@@ -11,6 +11,11 @@
 This service provides low-volume, conversational SMS messages to a single designated phone number.
 </p>
 
+<p>
+Opt-in is not verbal. Users explicitly request to receive messages.
+</p>
+
+  
 <form>
   <label>
     <input type="checkbox" checked disabled>
