Refactor HTML structure and improve styling
Updated the title and added meta tags for better responsiveness. Enhanced the overall structure and styling of the HTML document.

--- a/index.html
+++ b/index.html
@@ -1,76 +1,160 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Personal SMS Messaging Service</title>
+  <meta charset="UTF-8">
+  <title>SMS Messaging Service</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 0;
+      background: #f7f7f7;
+      color: #333;
+      line-height: 1.6;
+    }
+    header {
+      background: #1f2937;
+      color: #fff;
+      padding: 20px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+    nav {
+      margin-top: 10px;
+    }
+    nav a {
+      color: #9ca3af;
+      margin-right: 15px;
+      text-decoration: none;
+      font-size: 14px;
+    }
+    nav a:hover {
+      color: #fff;
+    }
+    main {
+      max-width: 900px;
+      margin: 30px auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+    h2 {
+      border-bottom: 1px solid #e5e7eb;
+      padding-bottom: 6px;
+      margin-top: 40px;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    footer {
+      text-align: center;
+      font-size: 13px;
+      color: #6b7280;
+      padding: 30px 10px;
+    }
+    .notice {
+      background: #f1f5f9;
+      padding: 15px;
+      border-left: 4px solid #2563eb;
+      margin: 20px 0;
+    }
+  </style>
 </head>
+
 <body>
-<h1>PERSONAL SMS MESSAGING SERVICE<h1>
 
-<h2>Service Operator</h2>
+<header>
+  <h1>SMS Messaging Service</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="privacy.html">Privacy Policy</a>
+    <a href="terms.html">Terms & Conditions</a>
+  </nav>
+</header>
 
-<p>
-This SMS messaging service is operated by an individual for personal, non-commercial use.
-</p>
+<main>
 
-<p>
-Contact Email: <a href="mailto:philgraybill2@gmail.com">phil@coastalshedcompany.com</a>
-</p>
+  <h2>Service Overview</h2>
 
-<p>
-<a href="index.html">Home</a> |
-<a href="about.html">About</a> |
-<a href="contact.html">Contact</a> |
-<a href="privacy.html">Privacy Policy</a> |
-<a href="terms.html">Terms & Conditions</a>
-</p>
-
-  
-<h2>SMS Messaging Disclosure</h2>
-
-<p>
-This website documents a personal, non-commercial SMS messaging service operated by an individual.
-The service is used for low-volume, conversational and informational messaging only.
-</p>
-
-
-<h2>Service Offered</h2>
-
-<p>
-This service provides one-to-one SMS message delivery for conversational and informational purposes.
-Messages may be initiated by the user or forwarded from a private Telegram group for convenience.
-</p>
-
-
-<h2>Service Description</h2>
-<p>
-The service provides low-volume, conversational SMS message delivery initiated by a private Telegram group to a single opted-in phone number.
-</p>
-  
-<h2>About</h2>
-<p>
-This service is operated by an individual for personal communication and notification purposes.
-</p>
-
-<h2>Contact</h2>
-<p>
-Email: philgraybill2@gmail.com<br>
-Address: 800 Mainstem Road Pantego, NC 27860  
   <p>
+    This website documents a personal, non-commercial SMS messaging service operated by an individual.
+    The service is used exclusively for low-volume, conversational and informational messaging.
+  </p>
 
-<h2>Complaints</h2>
-<p>
-If you have any concerns or complaints about this SMS messaging service,
-please email: <strong>philgraybill2@gmail.com</strong>
-</p>
+  <div class="notice">
+    <strong>Important:</strong> This service is not used for marketing, advertising, promotional campaigns,
+    or bulk messaging of any kind.
+  </div>
 
-    
-<h2>SMS Compliance</h2>
-<p>
-<a href="about.html">About</a> |
-<a href="contact.html">Contact</a> |
-<a href="privacy.html">Privacy Policy</a> |
-<a href="terms.html">Terms & Conditions</a>
-</p>
+  <h2>Service Operator</h2>
+
+  <p>
+    This SMS messaging service is operated by an individual for personal use.
+  </p>
+
+  <p>
+    <strong>Contact Email:</strong>
+    <a href="mailto:phil@coastalshedcompany.com">phil@coastalshedcompany.com</a>
+  </p>
+
+  <h2>Service Offered</h2>
+
+  <p>
+    The service provides one-to-one SMS message delivery to a single explicitly opted-in phone number.
+    Messages may be initiated by the user or forwarded from a private Telegram group for convenience.
+  </p>
+
+  <h2>Opt-In</h2>
+
+  <p>
+    Users opt in by explicitly requesting that SMS messages be sent to their phone number.
+    Opt-in is not verbal and is granted only after clear disclosure of messaging terms.
+  </p>
+
+  <h2>Message Details</h2>
+
+  <ul>
+    <li><strong>SMS Type:</strong> Conversational / Informational</li>
+    <li><strong>Message Frequency:</strong> Low volume (varies)</li>
+    <li><strong>Message & Data Rates:</strong> May apply</li>
+  </ul>
+
+  <h2>Opt-Out & Help</h2>
+
+  <ul>
+    <li>Reply <strong>STOP</strong> to stop receiving messages</li>
+    <li>Reply <strong>HELP</strong> for assistance</li>
+  </ul>
+
+  <h2>Compliance</h2>
+
+  <p>
+    This service follows applicable CTIA and carrier guidelines for consent, transparency,
+    and consumer protection.
+  </p>
+
+</main>
+
+<footer>
+  <p>
+    <a href="about.html">About</a> |
+    <a href="contact.html">Contact</a> |
+    <a href="privacy.html">Privacy Policy</a> |
+    <a href="terms.html">Terms & Conditions</a>
+  </p>
+  <p>
+    © Personal SMS Messaging Service
+  </p>
+</footer>
+
+</body>
+</html>
 
 
 </body>
