--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <p>
     <strong>Contact Email:</strong>
-    <a href="mailto:phil@coastalshedcompany.com">phil@coastalshedcompany.com</a>
+    <a href="mailto:philgraybill2@gmail.com">phil@coastalshedcompany.com</a>
   </p>
 
   <h2>Service Offered</h2>
