Update SMS service description and consent details
Clarified service description and consent process for SMS delivery.

--- a/index.html
+++ b/index.html
@@ -105,10 +105,20 @@
 
   <h2>Service Offered</h2>
 
-  <p>
-    The service provides one-to-one SMS message delivery to a single explicitly opted-in phone number.
-    Messages may be initiated by the user or forwarded from a private Telegram group for convenience.
-  </p>
+<p>
+This service provides one-to-one SMS message delivery to a single explicitly opted-in phone number.
+</p>
+
+<p>
+The recipient provides SMS consent directly to the service operator prior to receiving any messages.
+Consent is not obtained through Telegram or any third-party messaging platform.
+</p>
+
+<p>
+After SMS consent is granted, messages may be manually or programmatically sent by the operator,
+including messages sourced from private systems for the recipient’s convenience.
+</p>
+
 
   <h2>Opt-In</h2>
 
