Update opt-in description for SMS messaging
Clarified opt-in process for SMS messages.

--- a/index.html
+++ b/index.html
@@ -122,10 +122,15 @@ including messages sourced from private systems for the recipient’s convenienc
 
   <h2>Opt-In</h2>
 
-  <p>
-    Users opt in by explicitly requesting that SMS messages be sent to their phone number.
-    Opt-in is not verbal and is granted only after clear disclosure of messaging terms.
-  </p>
+<p>
+Users opt in by explicitly requesting to receive SMS messages directly from the service operator.
+This request may be made in writing or electronically.
+</p>
+
+<p>
+Opt-in is not verbal and is not collected through Telegram or any other third-party messaging platform.
+</p>
+
 
   <h2>Message Details</h2>
 
