--- a/optin.html
+++ b/optin.html
@@ -8,11 +8,12 @@
 <h1>SMS Messaging Opt-In</h1>
 
 <p>
-This service provides low-volume, conversational SMS messages to a single designated phone number.
+Users opt in by explicitly requesting to receive SMS messages directly from the service operator.
+This request may be made in writing or electronically.
 </p>
 
 <p>
-Opt-in is not verbal. Users explicitly request to receive messages.
+Opt-in is not verbal and is not collected through Telegram or any other third-party messaging platform.
 </p>
 
   
