Refactor SMS opt-in messaging and consent details
Removed redundant information and updated consent language.

--- a/optin.html
+++ b/optin.html
@@ -1,32 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>SMS Opt-In</title>
-</head>
-<body>
-
-<h1>SMS Messaging Opt-In</h1>
+<h2>Opt-In</h2>
 
 <p>
 Users opt in by explicitly requesting to receive SMS messages directly from the service operator.
-This request may be made in writing or electronically.
+
 </p>
 
 <p>
-Opt-in is not verbal and is not collected through Telegram or any other third-party messaging platform.
+When opt-in is verbal, the exact script used is published here:
+<a href="verbal-optin.html">Verbal Opt-In Script</a>
 </p>
 
-  
-<form>
-  <label>
-    <input type="checkbox" checked disabled>
-    I consent to receive SMS messages from this service.
-  </label>
+<p>
+Opt-in is not obtained through Telegram or any third-party messaging platform.
+</p>
 
-  <p>
-    Message frequency varies. Message & data rates may apply.
-    Reply STOP to unsubscribe. Reply HELP for help.
-  </p>
 
  <p>
 <a href="about.html">About</a> |
