--- a/index.html
+++ b/index.html
@@ -120,16 +120,7 @@ including messages sourced from private systems for the recipient’s convenienc
 </p>
 
 
-  <h2>Opt-In</h2>
 
-<p>
-Users opt in by explicitly requesting to receive SMS messages directly from the service operator.
-This request may be made in writing or electronically.
-</p>
-
-<p>
-Opt-in is not verbal and is not collected through Telegram or any other third-party messaging platform.
-</p>
 
 
   <h2>Message Details</h2>
@@ -162,6 +153,8 @@ Opt-in is not verbal and is not collected through Telegram or any other third-pa
     <a href="contact.html">Contact</a> |
     <a href="privacy.html">Privacy Policy</a> |
     <a href="terms.html">Terms & Conditions</a>
+    <a href="verbal-optin.html">Verbal Opt-In Script</a>
+
   </p>
   <p>
     © Personal SMS Messaging Service
