Add link to Verbal Opt-In Script in optin.html

--- a/optin.html
+++ b/optin.html
@@ -19,7 +19,9 @@ Opt-in is not obtained through Telegram or any third-party messaging platform.
 <a href="about.html">About</a> |
 <a href="contact.html">Contact</a> |
 <a href="privacy.html">Privacy Policy</a> |
-<a href="terms.html">Terms & Conditions</a>
+<a href="terms.html">Terms & Conditions</a>  
+<a href="verbal-optin.html">Verbal Opt-In Script</a>
+
 </p>
 
 </form>
