Clarify consent documentation for SMS messages

--- a/verbal-optin.html
+++ b/verbal-optin.html
@@ -37,8 +37,7 @@ SMS messages are only sent after the recipient clearly responds with an affirmat
 <h2>Additional Notes</h2>
 
 <p>
-Verbal opt-in is optional and not the primary opt-in method. SMS consent may also be obtained
-through written or electronic request. Regardless of method, consent is documented prior to
+ Regardless of opt-in method, consent is documented prior to
 sending any SMS messages.
 </p>
 
