--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
     <a href="contact.html">Contact</a>
     <a href="privacy.html">Privacy Policy</a>
     <a href="terms.html">Terms & Conditions</a>
+    <a href="verbal-optin.html">Verbal Opt-In Script</a>
+
   </nav>
 </header>
 
