Update opt-in description and link in optin.html

--- a/optin.html
+++ b/optin.html
@@ -2,12 +2,12 @@
 
 <p>
 Users opt in by explicitly requesting to receive SMS messages directly from the service operator.
-
+“Opt-in may be provided verbally or through explicit user confirmation prior to any SMS messages being sent.”
 </p>
 
 <p>
 When opt-in is verbal, the exact script used is published here:
-<a href="verbal-optin.html">Verbal Opt-In Script</a>
+<a href="“https://docs.google.com/document/d/1Y65TQEUyXXBWEXxfYwnvLFgkXurRQksJGoHePjKG494/edit?usp=sharing”">Verbal Opt-In Script</a>
 </p>
 
 <p>
